# newsLetterRS

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscribe.rs
tests/: health_check.rs
