[package]
name = "newsletter_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
reqwest = "0.11.23"
tokio = "1.35.1"
serde = {version = "1", features = ["derive"]}

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_rs"
